完成了磨兽守卫军的CDKEY生成站点 现在没有帐号管理能力 所以不能透露站点地址

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 /node_modules
 /nodejs_express_sqlite.rar
 /nodejs_express_sqlite
+/public/20150710210344\[www.76lt.com\].torrent
+/public/20150710210500\[www.76lt.com\].torrent
+/public/20150710210700\[www.76lt.com\].torrent
