新增了一个package.json 可以npm install来安装依赖文件

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 /public/20150710210344\[www.76lt.com\].torrent
 /public/20150710210500\[www.76lt.com\].torrent
 /public/20150710210700\[www.76lt.com\].torrent
+/npm-debug.log
