准备开始做https和登录认证

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 /public/20150710210500\[www.76lt.com\].torrent
 /public/20150710210700\[www.76lt.com\].torrent
 /npm-debug.log
+/nohup.out
+/log.txt
