改为https连接方式 增加了登录以及页面重定向

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version" : "0.0.1",
   "dependencies": {
         "express": "latest",
+        "express-session": "latest",
         "body-parser": "latest",
         "mongoose": "latest",
         "q": "latest"
